syntax = "proto3";
package models;

import "models/user.proto";

option go_package = "fast-writing-api/pb/models";

message QueryParams {
  int32 limit = 1;
  int32 offset = 2;
}

message ContentsQueryParams {
  QueryParams params = 1;
}

message UserContentsQueryParams {
  QueryParams params = 1;
  models.UserId id = 2;
}

message TitleQueryParams {
  QueryParams params = 1;
  string title = 2;
}