syntax = "proto3";
package fastwriting;

import "google/protobuf/timestamp.proto";
import "models/query.proto";
import "models/contents.proto";

option go_package = "fast-writing/pkg/pb/";

service SearchService {
  rpc FindContentsIdListByTitle (models.TitleQueryParams) returns (ContentsScoreList) {}
  rpc SaveSearchContents (models.Contents) returns (CreateSearchResponse) {}
}

message ContentsScore {
    models.ContentsId contentsId = 1;
    int64 score = 2;
    google.protobuf.Timestamp last_updated = 3;
}

message ContentsScoreList {
  repeated ContentsScore contentsScore = 1;
}

message CreateSearchResponse {
  bool created  = 1;
  string message = 2;
}